# Tayari.ai

./: .env.development  .env.example  .env.local.example  .env.production  .gitignore  .prettierignore  01_Reverse_Engineering_Report.md  02_PRD.md  README.md  eslint.config.js  eslint.config.mjs  instrumentation.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  prompts.md  proxy.ts  tailwind.config.ts  tsconfig.json  turbo.json  ui_flow.md  vercel.json  vitest.config.ts
apps/api/: Dockerfile.dev  alembic.ini  main.py  package.json  pyproject.toml
apps/api/ai/: code_review.py  mock_provider.py  openai_provider.py  provider.py  tests.py
apps/api/ai/realtime/: __init__.py  event_dispatcher.py  heartbeat.py  memory_manager.py  orchestrator.py  prompt_builder.py  retry_policy.py  session_manager.py  state_machine.py  structured_log.py  telemetry.py  transcript_manager.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_users_table.py  0002_create_interview_setup_tables.py  0003_create_user_templates_table.py  0004_create_session_events_table.py  0005_create_submissions_and_code_reviews.py  0006_add_spoken_language.py  0007_add_question_scores.py  0008_add_system_design_problem.py
apps/api/core/: audit.py  config.py  database.py  dependencies.py  errors.py  logging.py  rate_limit.py  secrets.py  security.py  security_headers.py
apps/api/evaluation/: RUNBOOK.md  __init__.py  aggregator.py  code_analysis.py  composer.py  pipeline.py  prompt_registry.py  recommendations.py  sanitize.py  scoring.py  transcript_analyzer.py  types.py  validator.py
apps/api/evaluation/evaluators/: __init__.py  base.py  behavioral.py  coding.py  communication.py  system_design.py
apps/api/execution/: __init__.py  logger.py  registry.py  sandbox.py
apps/api/execution/runners/: base.py  cpp_runner.py  go_runner.py  java_runner.py  javascript_runner.py  python_runner.py  rust_runner.py  typescript_runner.py
apps/api/features/analytics/: dependencies.py  repository.py  router.py  schemas.py  service.py
apps/api/features/auth/: dependencies.py  exceptions.py  guard.py  interfaces.py  models.py  repositories.py  routes.py  schemas.py  services.py  tests.py
apps/api/features/billing/: models.py  routes.py  schemas.py  services.py  tests.py
apps/api/features/code/: __init__.py  dependencies.py  models.py  repository.py  routes.py  schemas.py  service.py
apps/api/features/dashboard/: dependencies.py  repository.py  router.py  schemas.py  service.py
apps/api/features/health/: routes.py
apps/api/features/interview/: dependencies.py  models.py  repository.py  routes.py  schemas.py  service.py  services.py  tests.py
apps/api/features/reports/: dependencies.py  (+7 more)
apps/api/judge/: __init__.py  judge.py  metrics.py  queue.py  registry.py  sandbox.py
apps/api/models/: __init__.py  company.py  evaluation.py  interview.py  subscription.py  user.py
apps/api/scripts/: generate_openapi.py  seed.py
apps/api/tests/: conftest.py  test_auth.py  test_e2e_evaluation.py  test_ready.py  test_security_headers.py  test_sessions.py
apps/api/workers/: evaluation.py  scheduler.py
(+337 files in other folders)
