[project]
name = "tayari-api"
version = "0.1.0"
description = "Tayari AI Interview Platform — FastAPI Backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "stripe>=9.0.0",
    "apscheduler>=3.10.0",
    "psycopg2-binary>=2.9.0",
    "sentry-sdk>=2.5.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "boto3>=1.34.0",
    "resend>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "coverage>=7.5.0",
    "ipython>=8.25.0",
    "aiosqlite>=0.20.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
disable_error_code = [
    "no-untyped-def",    # Stub routes — typed when implemented
    "type-arg",          # Python 3.12+ allows bare dict/list generics
    "no-any-return",     # passlib/jose return Any
    "no-any-unimported", # Third-party stubs not under our control
    "union-attr",        # Common for response.usage.xx patterns
]

[tool.pytest.ini_options]
testpaths = ["tests", "features"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "coverage>=7.15.0",
    "pytest-asyncio>=1.4.0",
]
